<resources>
    <string name="app_name">ATG World</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Activity Labels -->
    <string name="activity_home">Home</string>
    <string name="activity_post">Post</string>
    <string name="activity_notification">Notification</string>
    <string name="activity_profile">Profile</string>

    <!-- Fragment Titles -->
    <string name="fragment_get_all">All</string>
    <string name="fragment_article">Article</string>
    <string name="fragment_meetup">Meetups</string>

    <string name="action_settings">Settings</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="str_not_connect_to_server">Not connected to server.</string>
    <string name="str_font">open-sans-regular.ttf</string>
    <string name="str_font_bold">open-sans-semibold.ttf</string>
    <string name="str_font_material">material-icon-font.ttf</string>

    <string name="ic_keyboard_arrow_left">&#xe0c6;</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="ic_folder">&#xe09d;</string>

    <string name="facebook_app_id">165150440699462</string>
    <string name="fb_login_protocol_scheme">fb165150440699462</string>


    <string name="com.twitter.sdk.android.CONSUMER_KEY">MvMXvCGmMEhhVbdIWbMR1lBf5</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">wFD9WXmoMdJdyB55vlMyo268ZsXUnRMrfaGyX7koeCYL00DMLi</string>


    <string name="SERVER_CLIENT_ID">694307195919-quopau3ed75mkjvrr1snq0sdkamuc2mb.apps.googleusercontent.com</string>
    <string name="string_1">The files are very easy to navigate.</string>
    <string name="string_2">The files are very easy to navigate. layers are organised
     in groups and subgroup</string>
    <string name="string_3">5th May 2016</string>

    <string name="str_timeline_view">Timeline View</string>
    <string name="str_imgoing">I\'M GOING</string>
    <string name="str_myinterests">MY INTERESTS</string>
    <string name="str_no_data_found">No Data Found</string>
    <string name="str_helvatica_normal">helvetica_normal.ttf</string>
    <string name="str_helvetica_bold">helvetica_bold.ttf</string>
    <string name="swipe_right_text">Swipe right to Upvote user post</string>
    <string name="swipe_left_text">Swipe Left to Downvote user post</string>

    <!-- Start Intro Slider -->
    <string name="next">NEXT></string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_login">Sign in</string>
    <!-- End Intro Slider -->

    <!-- Strings related to login  and signup via email-->
    <string name="prompt_email">Email</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_cnf">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">REGISTER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_password_same">Enter correct password</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_your_network_connection">Check Your Network Connection</string>
    <string name="reload">Reload</string>
    <string name="no_data">No Data Available</string>
    <string name="content_desc">Content Description</string>
    <string name="error_message">Can\'t load data.\\nCheck your network connection.</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Queries</item>
        <item>Posts</item>
        <item>Education</item>
        <item>Settings</item>
    </string-array>

    <string name="profile_image_path">https://www.atg.world/public/assets/Frontend/user/profile_pics/</string>
    <string name="fragment_event">Events</string>
    <string name="fragment_jobs">Jobs</string>
    <string name="fragment_queries">Qrious?</string>
    <string name="fragment_education">Education</string>
    <string name="my_posts">My Posts</string>
    <string name="my_groups">My Groups</string>
    <string name="explore_groups">Explore Groups</string>

    <!-- Fab Layout String -->

    <string name="job">Post Job</string>
    <string name="meetup">Post Meetup</string>
    <string name="article">Post Article</string>
    <string name="education">Post Education</string>
    <string name="event">Post Event</string>
    <string name="qrious">Post Qrious</string>
    <!-- Fab Layout String end -->

    <string name="user_image_path">https://www.atg.world/public/assets/Frontend/user/profile_pics/</string>
    <string name="article_details_image_path">https://www.atg.world/public/assets/Frontend/images/article_image/thumb/</string>
    <string name="activity_post_details">Post Details</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="comment_here">Comment Here</string>
    <string name="followers_label">Followers</string>
    <string name="following_label">Following</string>
    <string name="profile_photo_label">Profile Photo</string>
    <string name="users_first_name_label">First Name</string>
    <string name="users_last_name_label">Last Name</string>
    <string name="users_headline_label">Headline</string>
    <string name="users_Education_label">Education</string>
    <string name="users_profession_label">Profession</string>
    <string name="users_location_label">Location</string>
    <string name="users_about_me_label">About Me</string>
    <string name="edit_intro_label">Edit Intro</string>
    <string name="connection_label">Connections</string>
    <string name="save">Save</string>
    <string name="users_tagline_label">Tagline</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>


    <string name="roboto_font">Roboto-Regular.ttf</string>
    <string name="roboto_font_bold">Roboto-Bold.ttf</string>
    <string name="roboto_font_italic">Roboto-Italic.ttf</string>
</resources>
