<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/activity_home" />

        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/post_icon"
            android:title="@string/activity_post" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="Notifications" />

        <item
            android:id="@+id/nav_my_posts"
            android:icon="@drawable/myposts_icon"
            android:title="@string/my_posts" />

        <item
            android:id="@+id/nav_my_groups"
            android:icon="@drawable/mygroups_icon"
            android:title="@string/my_groups" />

        <item
            android:id="@+id/nav_explore_groups"
            android:icon="@drawable/exploregroups_icon"
            android:title="@string/explore_groups" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="Logout" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="Settings" />
    </group>

</menu>
