<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/textViewProfilePhotoLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile_photo_label"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageViewProfilePhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewProfilePhotoLabel" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutUsersFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/circleImageViewProfilePhoto">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUsersFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/users_first_name_label" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutUsersLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUsersFirstName">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUsersLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/users_last_name_label" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutProfileHeadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUsersLastName">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextProfileHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/users_headline_label" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutUsersEducation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutProfileHeadline">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUsersEducation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/users_Education_label" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutUsersProfession"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUsersEducation">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUsersProfession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/users_profession_label" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutUsersLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUsersProfession">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUsersLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/users_location_label" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutUsersBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUsersLocation">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUsersBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/users_about_me_label" />

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>